{
  "version": 4,
  "terraform_version": "1.6.3",
  "serial": 120,
  "lineage": "f04d1e38-a338-0288-ff4e-f3f7a7746a22",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_application_gateway",
      "name": "web_ag",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "authentication_certificate": [],
            "autoscale_configuration": [
              {
                "max_capacity": 2,
                "min_capacity": 0
              }
            ],
            "backend_address_pool": [
              {
                "fqdns": [],
                "id": "/subscriptions/f5507fb3-e5ac-410d-bcc4-cfa83191e4da/resourceGroups/dev-BAU-RG-100/providers/Microsoft.Network/applicationGateways/b11-web-agw/backendAddressPools/dev-BAU-east-vnet01-beap-app1",
                "ip_addresses": [],
                "name": "dev-BAU-east-vnet01-beap-app1"
              }
            ],
            "backend_http_settings": [
              {
                "affinity_cookie_name": "",
                "authentication_certificate": [],
                "connection_draining": [],
                "cookie_based_affinity": "Disabled",
                "host_name": "",
                "id": "/subscriptions/f5507fb3-e5ac-410d-bcc4-cfa83191e4da/resourceGroups/dev-BAU-RG-100/providers/Microsoft.Network/applicationGateways/b11-web-agw/backendHttpSettingsCollection/dev-BAU-east-vnet01-be-htst-app1",
                "name": "dev-BAU-east-vnet01-be-htst-app1",
                "path": "",
                "pick_host_name_from_backend_address": false,
                "port": 80,
                "probe_id": "/subscriptions/f5507fb3-e5ac-410d-bcc4-cfa83191e4da/resourceGroups/dev-BAU-RG-100/providers/Microsoft.Network/applicationGateways/b11-web-agw/probes/dev-BAU-east-vnet01-be-probe-app1",
                "probe_name": "dev-BAU-east-vnet01-be-probe-app1",
                "protocol": "Http",
                "request_timeout": 20,
                "trusted_root_certificate_names": []
              }
            ],
            "custom_error_configuration": [],
            "enable_http2": false,
            "fips_enabled": false,
            "firewall_policy_id": "",
            "force_firewall_policy_association": false,
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/f5507fb3-e5ac-410d-bcc4-cfa83191e4da/resourceGroups/dev-BAU-RG-100/providers/Microsoft.Network/applicationGateways/b11-web-agw/frontendIPConfigurations/dev-BAU-east-vnet01-feip",
                "name": "dev-BAU-east-vnet01-feip",
                "private_ip_address": "",
                "private_ip_address_allocation": "Dynamic",
                "private_link_configuration_id": "",
                "private_link_configuration_name": "",
                "public_ip_address_id": "/subscriptions/f5507fb3-e5ac-410d-bcc4-cfa83191e4da/resourceGroups/dev-BAU-RG-100/providers/Microsoft.Network/publicIPAddresses/frontend-pip",
                "subnet_id": ""
              }
            ],
            "frontend_port": [
              {
                "id": "/subscriptions/f5507fb3-e5ac-410d-bcc4-cfa83191e4da/resourceGroups/dev-BAU-RG-100/providers/Microsoft.Network/applicationGateways/b11-web-agw/frontendPorts/dev-BAU-east-vnet01-feport",
                "name": "dev-BAU-east-vnet01-feport",
                "port": 80
              }
            ],
            "gateway_ip_configuration": [
              {
                "id": "/subscriptions/f5507fb3-e5ac-410d-bcc4-cfa83191e4da/resourceGroups/dev-BAU-RG-100/providers/Microsoft.Network/applicationGateways/b11-web-agw/gatewayIPConfigurations/my-gateway-ip-configuration",
                "name": "my-gateway-ip-configuration",
                "subnet_id": "/subscriptions/f5507fb3-e5ac-410d-bcc4-cfa83191e4da/resourceGroups/dev-BAU-RG-100/providers/Microsoft.Network/virtualNetworks/dev-BAU-east-vnet01/subnets/appgateway-sub02"
              }
            ],
            "global": [],
            "http_listener": [
              {
                "custom_error_configuration": [],
                "firewall_policy_id": "",
                "frontend_ip_configuration_id": "/subscriptions/f5507fb3-e5ac-410d-bcc4-cfa83191e4da/resourceGroups/dev-BAU-RG-100/providers/Microsoft.Network/applicationGateways/b11-web-agw/frontendIPConfigurations/dev-BAU-east-vnet01-feip",
                "frontend_ip_configuration_name": "dev-BAU-east-vnet01-feip",
                "frontend_port_id": "/subscriptions/f5507fb3-e5ac-410d-bcc4-cfa83191e4da/resourceGroups/dev-BAU-RG-100/providers/Microsoft.Network/applicationGateways/b11-web-agw/frontendPorts/dev-BAU-east-vnet01-feport",
                "frontend_port_name": "dev-BAU-east-vnet01-feport",
                "host_name": "",
                "host_names": [],
                "id": "/subscriptions/f5507fb3-e5ac-410d-bcc4-cfa83191e4da/resourceGroups/dev-BAU-RG-100/providers/Microsoft.Network/applicationGateways/b11-web-agw/httpListeners/dev-BAU-east-vnet01-httplstn",
                "name": "dev-BAU-east-vnet01-httplstn",
                "protocol": "Http",
                "require_sni": false,
                "ssl_certificate_id": "",
                "ssl_certificate_name": "",
                "ssl_profile_id": "",
                "ssl_profile_name": ""
              }
            ],
            "id": "/subscriptions/f5507fb3-e5ac-410d-bcc4-cfa83191e4da/resourceGroups/dev-BAU-RG-100/providers/Microsoft.Network/applicationGateways/b11-web-agw",
            "identity": [],
            "location": "eastus",
            "name": "b11-web-agw",
            "private_endpoint_connection": [],
            "private_link_configuration": [],
            "probe": [
              {
                "host": "127.0.0.1",
                "id": "/subscriptions/f5507fb3-e5ac-410d-bcc4-cfa83191e4da/resourceGroups/dev-BAU-RG-100/providers/Microsoft.Network/applicationGateways/b11-web-agw/probes/dev-BAU-east-vnet01-be-probe-app1",
                "interval": 30,
                "match": [
                  {
                    "body": "App1",
                    "status_code": [
                      "200"
                    ]
                  }
                ],
                "minimum_servers": 0,
                "name": "dev-BAU-east-vnet01-be-probe-app1",
                "path": "/*",
                "pick_host_name_from_backend_http_settings": false,
                "port": 80,
                "protocol": "Http",
                "timeout": 30,
                "unhealthy_threshold": 3
              }
            ],
            "redirect_configuration": [],
            "request_routing_rule": [
              {
                "backend_address_pool_id": "/subscriptions/f5507fb3-e5ac-410d-bcc4-cfa83191e4da/resourceGroups/dev-BAU-RG-100/providers/Microsoft.Network/applicationGateways/b11-web-agw/backendAddressPools/dev-BAU-east-vnet01-beap-app1",
                "backend_address_pool_name": "dev-BAU-east-vnet01-beap-app1",
                "backend_http_settings_id": "/subscriptions/f5507fb3-e5ac-410d-bcc4-cfa83191e4da/resourceGroups/dev-BAU-RG-100/providers/Microsoft.Network/applicationGateways/b11-web-agw/backendHttpSettingsCollection/dev-BAU-east-vnet01-be-htst-app1",
                "backend_http_settings_name": "dev-BAU-east-vnet01-be-htst-app1",
                "http_listener_id": "/subscriptions/f5507fb3-e5ac-410d-bcc4-cfa83191e4da/resourceGroups/dev-BAU-RG-100/providers/Microsoft.Network/applicationGateways/b11-web-agw/httpListeners/dev-BAU-east-vnet01-httplstn",
                "http_listener_name": "dev-BAU-east-vnet01-httplstn",
                "id": "/subscriptions/f5507fb3-e5ac-410d-bcc4-cfa83191e4da/resourceGroups/dev-BAU-RG-100/providers/Microsoft.Network/applicationGateways/b11-web-agw/requestRoutingRules/dev-BAU-east-vnet01-rqrt-1",
                "name": "dev-BAU-east-vnet01-rqrt-1",
                "priority": 9,
                "redirect_configuration_id": "",
                "redirect_configuration_name": "",
                "rewrite_rule_set_id": "",
                "rewrite_rule_set_name": "",
                "rule_type": "Basic",
                "url_path_map_id": "",
                "url_path_map_name": ""
              }
            ],
            "resource_group_name": "dev-BAU-RG-100",
            "rewrite_rule_set": [],
            "sku": [
              {
                "capacity": 0,
                "name": "Standard_v2",
                "tier": "Standard_v2"
              }
            ],
            "ssl_certificate": [],
            "ssl_policy": [
              {
                "cipher_suites": [],
                "disabled_protocols": [],
                "min_protocol_version": "",
                "policy_name": "AppGwSslPolicy20150501",
                "policy_type": "Predefined"
              }
            ],
            "ssl_profile": [],
            "tags": null,
            "timeouts": null,
            "trusted_client_certificate": [],
            "trusted_root_certificate": [],
            "url_path_map": [],
            "waf_configuration": [],
            "zones": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_public_ip.standard_LB",
            "azurerm_resource_group.rg01",
            "azurerm_subnet.appgateway_subnet02",
            "azurerm_virtual_network.east_vnet01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "web-vm01-nic01",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/f5507fb3-e5ac-410d-bcc4-cfa83191e4da/resourceGroups/dev-BAU-RG-100/providers/Microsoft.Network/networkInterfaces/web-vm01-nic01",
            "internal_domain_name_suffix": "bprz5uqfwwjebnab2zhhkipw3g.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "172.16.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/f5507fb3-e5ac-410d-bcc4-cfa83191e4da/resourceGroups/dev-BAU-RG-100/providers/Microsoft.Network/virtualNetworks/dev-BAU-east-vnet01/subnets/east-vnet01-private-sub01"
              }
            ],
            "location": "eastus",
            "mac_address": "7C-1E-52-0D-52-6E",
            "name": "web-vm01-nic01",
            "private_ip_address": "172.16.1.4",
            "private_ip_addresses": [
              "172.16.1.4"
            ],
            "resource_group_name": "dev-BAU-RG-100",
            "virtual_machine_id": "/subscriptions/f5507fb3-e5ac-410d-bcc4-cfa83191e4da/resourceGroups/dev-BAU-RG-100/providers/Microsoft.Compute/virtualMachines/web-east-vm01"
          },
          "dependencies": [
            "azurerm_resource_group.rg01",
            "azurerm_subnet.private-subnet01",
            "azurerm_virtual_network.east_vnet01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "web-vm02-nic01",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/f5507fb3-e5ac-410d-bcc4-cfa83191e4da/resourceGroups/dev-BAU-RG-100/providers/Microsoft.Network/networkInterfaces/web-vm02-nic01",
            "internal_domain_name_suffix": "bprz5uqfwwjebnab2zhhkipw3g.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "172.16.1.6",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/f5507fb3-e5ac-410d-bcc4-cfa83191e4da/resourceGroups/dev-BAU-RG-100/providers/Microsoft.Network/virtualNetworks/dev-BAU-east-vnet01/subnets/east-vnet01-private-sub01"
              }
            ],
            "location": "eastus",
            "mac_address": "7C-1E-52-19-44-3D",
            "name": "web-vm02-nic01",
            "private_ip_address": "172.16.1.6",
            "private_ip_addresses": [
              "172.16.1.6"
            ],
            "resource_group_name": "dev-BAU-RG-100",
            "virtual_machine_id": "/subscriptions/f5507fb3-e5ac-410d-bcc4-cfa83191e4da/resourceGroups/dev-BAU-RG-100/providers/Microsoft.Compute/virtualMachines/web-vm02"
          },
          "dependencies": [
            "azurerm_resource_group.rg01",
            "azurerm_subnet.private-subnet01",
            "azurerm_virtual_network.east_vnet01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "web-vm03-nic01",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/f5507fb3-e5ac-410d-bcc4-cfa83191e4da/resourceGroups/dev-BAU-RG-100/providers/Microsoft.Network/networkInterfaces/web-vm03-nic01",
            "internal_domain_name_suffix": "bprz5uqfwwjebnab2zhhkipw3g.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "172.16.1.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/f5507fb3-e5ac-410d-bcc4-cfa83191e4da/resourceGroups/dev-BAU-RG-100/providers/Microsoft.Network/virtualNetworks/dev-BAU-east-vnet01/subnets/east-vnet01-private-sub01"
              }
            ],
            "location": "eastus",
            "mac_address": "60-45-BD-DC-40-99",
            "name": "web-vm03-nic01",
            "private_ip_address": "172.16.1.5",
            "private_ip_addresses": [
              "172.16.1.5"
            ],
            "resource_group_name": "dev-BAU-RG-100",
            "virtual_machine_id": "/subscriptions/f5507fb3-e5ac-410d-bcc4-cfa83191e4da/resourceGroups/dev-BAU-RG-100/providers/Microsoft.Compute/virtualMachines/Web-VM03"
          },
          "dependencies": [
            "azurerm_resource_group.rg01",
            "azurerm_subnet.private-subnet01",
            "azurerm_virtual_network.east_vnet01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "east_nsg01",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/f5507fb3-e5ac-410d-bcc4-cfa83191e4da/resourceGroups/dev-BAU-RG-100/providers/Microsoft.Network/networkSecurityGroups/east-nsg01",
            "location": "eastus",
            "name": "east-nsg01",
            "resource_group_name": "dev-BAU-RG-100",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow_All",
                "priority": 500,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "bastion_pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/f5507fb3-e5ac-410d-bcc4-cfa83191e4da/resourceGroups/dev-BAU-RG-100/providers/Microsoft.Network/publicIPAddresses/bastion001",
            "idle_timeout_in_minutes": 4,
            "ip_address": "52.170.58.0",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "bastion001",
            "resource_group_name": "dev-BAU-RG-100",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.rg01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "standard_LB",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/f5507fb3-e5ac-410d-bcc4-cfa83191e4da/resourceGroups/dev-BAU-RG-100/providers/Microsoft.Network/publicIPAddresses/frontend-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "52.170.57.231",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "frontend-pip",
            "resource_group_name": "dev-BAU-RG-100",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.rg01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "appgateway_subnet01",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "172.16.200.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/f5507fb3-e5ac-410d-bcc4-cfa83191e4da/resourceGroups/dev-BAU-RG-100/providers/Microsoft.Network/virtualNetworks/dev-BAU-east-vnet01/subnets/appgateway-sub01",
            "name": "appgateway-sub01",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "dev-BAU-RG-100",
            "virtual_network_name": "dev-BAU-east-vnet01"
          },
          "dependencies": [
            "azurerm_resource_group.rg01",
            "azurerm_virtual_network.east_vnet01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "appgateway_subnet02",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "172.16.210.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/f5507fb3-e5ac-410d-bcc4-cfa83191e4da/resourceGroups/dev-BAU-RG-100/providers/Microsoft.Network/virtualNetworks/dev-BAU-east-vnet01/subnets/appgateway-sub02",
            "name": "appgateway-sub02",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "dev-BAU-RG-100",
            "virtual_network_name": "dev-BAU-east-vnet01"
          },
          "dependencies": [
            "azurerm_resource_group.rg01",
            "azurerm_virtual_network.east_vnet01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "bastion_subnet01",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "172.16.100.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/f5507fb3-e5ac-410d-bcc4-cfa83191e4da/resourceGroups/dev-BAU-RG-100/providers/Microsoft.Network/virtualNetworks/dev-BAU-east-vnet01/subnets/AzureBastionSubnet",
            "name": "AzureBastionSubnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "dev-BAU-RG-100",
            "virtual_network_name": "dev-BAU-east-vnet01"
          },
          "dependencies": [
            "azurerm_resource_group.rg01",
            "azurerm_virtual_network.east_vnet01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "private-subnet01",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "172.16.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/f5507fb3-e5ac-410d-bcc4-cfa83191e4da/resourceGroups/dev-BAU-RG-100/providers/Microsoft.Network/virtualNetworks/dev-BAU-east-vnet01/subnets/east-vnet01-private-sub01",
            "name": "east-vnet01-private-sub01",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "dev-BAU-RG-100",
            "virtual_network_name": "dev-BAU-east-vnet01"
          },
          "dependencies": [
            "azurerm_resource_group.rg01",
            "azurerm_virtual_network.east_vnet01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "public-subnet01",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "172.16.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/f5507fb3-e5ac-410d-bcc4-cfa83191e4da/resourceGroups/dev-BAU-RG-100/providers/Microsoft.Network/virtualNetworks/dev-BAU-east-vnet01/subnets/east-vnet01-public-sub01",
            "name": "east-vnet01-public-sub01",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "dev-BAU-RG-100",
            "virtual_network_name": "dev-BAU-east-vnet01"
          },
          "dependencies": [
            "azurerm_resource_group.rg01",
            "azurerm_virtual_network.east_vnet01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "vnet01private-subnet01",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "192.168.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/f5507fb3-e5ac-410d-bcc4-cfa83191e4da/resourceGroups/dev-BAU-RG-100/providers/Microsoft.Network/virtualNetworks/dev-BAU-east02/subnets/east-vnet01-private-sub01",
            "name": "east-vnet01-private-sub01",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "dev-BAU-RG-100",
            "virtual_network_name": "dev-BAU-east02"
          },
          "dependencies": [
            "azurerm_resource_group.rg01",
            "azurerm_virtual_network.east_vnet02"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "vnet02public-subnet01",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "192.168.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/f5507fb3-e5ac-410d-bcc4-cfa83191e4da/resourceGroups/dev-BAU-RG-100/providers/Microsoft.Network/virtualNetworks/dev-BAU-east02/subnets/east-vnet01-public-sub01",
            "name": "east-vnet01-public-sub01",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "dev-BAU-RG-100",
            "virtual_network_name": "dev-BAU-east02"
          },
          "dependencies": [
            "azurerm_resource_group.rg01",
            "azurerm_virtual_network.east_vnet02"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "east_vnet01_privatesub01_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/f5507fb3-e5ac-410d-bcc4-cfa83191e4da/resourceGroups/dev-BAU-RG-100/providers/Microsoft.Network/virtualNetworks/dev-BAU-east-vnet01/subnets/east-vnet01-private-sub01",
            "network_security_group_id": "/subscriptions/f5507fb3-e5ac-410d-bcc4-cfa83191e4da/resourceGroups/dev-BAU-RG-100/providers/Microsoft.Network/networkSecurityGroups/east-nsg01",
            "subnet_id": "/subscriptions/f5507fb3-e5ac-410d-bcc4-cfa83191e4da/resourceGroups/dev-BAU-RG-100/providers/Microsoft.Network/virtualNetworks/dev-BAU-east-vnet01/subnets/east-vnet01-private-sub01"
          },
          "dependencies": [
            "azurerm_network_security_group.east_nsg01",
            "azurerm_resource_group.rg01",
            "azurerm_subnet.private-subnet01",
            "azurerm_virtual_network.east_vnet01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "east_vnet01_publicesub01_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/f5507fb3-e5ac-410d-bcc4-cfa83191e4da/resourceGroups/dev-BAU-RG-100/providers/Microsoft.Network/virtualNetworks/dev-BAU-east-vnet01/subnets/east-vnet01-public-sub01",
            "network_security_group_id": "/subscriptions/f5507fb3-e5ac-410d-bcc4-cfa83191e4da/resourceGroups/dev-BAU-RG-100/providers/Microsoft.Network/networkSecurityGroups/east-nsg01",
            "subnet_id": "/subscriptions/f5507fb3-e5ac-410d-bcc4-cfa83191e4da/resourceGroups/dev-BAU-RG-100/providers/Microsoft.Network/virtualNetworks/dev-BAU-east-vnet01/subnets/east-vnet01-public-sub01"
          },
          "dependencies": [
            "azurerm_network_security_group.east_nsg01",
            "azurerm_resource_group.rg01",
            "azurerm_subnet.public-subnet01",
            "azurerm_virtual_network.east_vnet01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "east_vnet01",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "172.16.0.0/16",
              "192.168.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "d29fe30b-b505-4092-b401-e64e7521f6ee",
            "id": "/subscriptions/f5507fb3-e5ac-410d-bcc4-cfa83191e4da/resourceGroups/dev-BAU-RG-100/providers/Microsoft.Network/virtualNetworks/dev-BAU-east-vnet01",
            "location": "eastus",
            "name": "dev-BAU-east-vnet01",
            "resource_group_name": "dev-BAU-RG-100",
            "subnet": [
              {
                "address_prefix": "172.16.1.0/24",
                "id": "/subscriptions/f5507fb3-e5ac-410d-bcc4-cfa83191e4da/resourceGroups/dev-BAU-RG-100/providers/Microsoft.Network/virtualNetworks/dev-BAU-east-vnet01/subnets/east-vnet01-private-sub01",
                "name": "east-vnet01-private-sub01",
                "security_group": "/subscriptions/f5507fb3-e5ac-410d-bcc4-cfa83191e4da/resourceGroups/dev-BAU-RG-100/providers/Microsoft.Network/networkSecurityGroups/east-nsg01"
              },
              {
                "address_prefix": "172.16.100.0/24",
                "id": "/subscriptions/f5507fb3-e5ac-410d-bcc4-cfa83191e4da/resourceGroups/dev-BAU-RG-100/providers/Microsoft.Network/virtualNetworks/dev-BAU-east-vnet01/subnets/AzureBastionSubnet",
                "name": "AzureBastionSubnet"
              },
              {
                "address_prefix": "172.16.2.0/24",
                "id": "/subscriptions/f5507fb3-e5ac-410d-bcc4-cfa83191e4da/resourceGroups/dev-BAU-RG-100/providers/Microsoft.Network/virtualNetworks/dev-BAU-east-vnet01/subnets/east-vnet01-public-sub01",
                "name": "east-vnet01-public-sub01",
                "security_group": "/subscriptions/f5507fb3-e5ac-410d-bcc4-cfa83191e4da/resourceGroups/dev-BAU-RG-100/providers/Microsoft.Network/networkSecurityGroups/east-nsg01"
              },
              {
                "address_prefix": "172.16.200.0/24",
                "id": "/subscriptions/f5507fb3-e5ac-410d-bcc4-cfa83191e4da/resourceGroups/dev-BAU-RG-100/providers/Microsoft.Network/virtualNetworks/dev-BAU-east-vnet01/subnets/appgateway-sub01",
                "name": "appgateway-sub01"
              }
            ]
          },
          "dependencies": [
            "azurerm_resource_group.rg01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "east_vnet02",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "192.168.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "a6319e55-57e5-452a-8159-a02c9a9135d3",
            "id": "/subscriptions/f5507fb3-e5ac-410d-bcc4-cfa83191e4da/resourceGroups/dev-BAU-RG-100/providers/Microsoft.Network/virtualNetworks/dev-BAU-east02",
            "location": "eastus",
            "name": "dev-BAU-east02",
            "resource_group_name": "dev-BAU-RG-100",
            "subnet": [
              {
                "address_prefix": "192.168.1.0/24",
                "id": "/subscriptions/f5507fb3-e5ac-410d-bcc4-cfa83191e4da/resourceGroups/dev-BAU-RG-100/providers/Microsoft.Network/virtualNetworks/dev-BAU-east02/subnets/east-vnet01-private-sub01",
                "name": "east-vnet01-private-sub01"
              },
              {
                "address_prefix": "192.168.2.0/24",
                "id": "/subscriptions/f5507fb3-e5ac-410d-bcc4-cfa83191e4da/resourceGroups/dev-BAU-RG-100/providers/Microsoft.Network/virtualNetworks/dev-BAU-east02/subnets/east-vnet01-public-sub01",
                "name": "east-vnet01-public-sub01"
              }
            ]
          },
          "dependencies": [
            "azurerm_resource_group.rg01"
          ]
        }
      ]
    }
  ]
}